# advanced-analytics-poc

./: .gitignore  README.md
.github/workflows/: api-build-and-push.yaml
apps/api/: Dockerfile  controller.py  core.py  docker-compose.yaml  entities.py  main.py  messages.py  pyproject.toml  repository.py  router.py  service.py
apps/ingester/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
terraform/modules/analytics/: artifact_registry.tf  cloud_run.tf  iam.tf  main.tf  variables.tf
terraform/phases/development/: main.tf
