[tool.poetry]
name = "ingester"
version = "0.1.0"
description = ""
authors = ["Andres Garcia <jose.andres.gm29@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
